--- a/app/src/main/res/layout/tab_phonebook.xml
+++ b/app/src/main/res/layout/tab_phonebook.xml
@@ -7,13 +7,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.28"
         android:text="Hello World!"
         android:id="@+id/textview"/>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:id="@+id/edit_text"/>
+        android:id="@+id/edit_text"
+        android:layout_weight="0.01" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -31,4 +33,13 @@
             android:text="Get"
             android:id="@+id/button_get"/>
     </LinearLayout>
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp" />
+
 </LinearLayout>
