--- a/app/src/main/res/layout/tab_phonebook.xml
+++ b/app/src/main/res/layout/tab_phonebook.xml
@@ -4,42 +4,52 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="NAME"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="#CCEBFC"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="PHONE NUMBER"
+            android:gravity="center"
+            android:background="#CEFCCC" />
+    </LinearLayout>
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.28"
-        android:text="Hello World!"
-        android:id="@+id/textview"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/edit_text"
-        android:layout_weight="0.01" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal">
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Send"
-            android:id="@+id/button_send"/>
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Get"
-            android:id="@+id/button_get"/>
-    </LinearLayout>
+        android:layout_weight="3.81"
+        android:id="@+id/list"></ListView>
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView" />
+
+
 </LinearLayout>
+
+
+
